--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.4.3",
     "@reduxjs/toolkit": "^1.9.1",
     "normalize.css": "^8.0.1",
     "react": "^18.2.0",
